# Yappus-Term

./: .SRCINFO  .env.example  .gitignore  Cargo.toml  PKGBUILD  README.md  install-yappus.ps1  install-yappus.sh
apt/: index.html
apt/dists/: Release
apt/dists/stable/main/binary-amd64/: Packages  yappus_0.1.0_amd64.deb
debian/: changelog  control  copyright  rules
src/: api.rs  cli.rs  main.rs  memory.rs  startup.rs  ui.rs  utils.rs
src/terminal/: completion.rs  interactive.rs  mod.rs  shell_commands.rs
yappus-website/: README.md  package-lock.json  package.json
yappus-website/src/app/: globals.css  layout.tsx  page.tsx
yappus-website/src/components/: Footer.tsx  Header.tsx  SectionContainer.tsx  SectionTitle.tsx
yappus-website/src/components/docs/: BasicUsageSection.tsx  CommandsSection.tsx  ConfigSection.tsx  ContextAwarenessSection.tsx  DocumentationSection.tsx  ExamplesSection.tsx  HistorySection.tsx  ModelSection.tsx
yappus-website/src/components/home/: FeaturesSection.tsx  HeroSection.tsx  InstallationSection.tsx  TerminalPreview.tsx
yappus-website/src/components/ui/: CommandBadge.tsx  DocExample.tsx  ExampleQuery.tsx  FeatureCard.tsx  InstallCard.tsx  ModelBadge.tsx
