[package]
name = "yappus-term"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gemini-ai = "0.1.167"
directories = "4.0"
termimad = "0.20"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "yappus"
path = "src/main.rs"
